apps/home-assistant/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.112
ports:
  - name: http
    port: 8123
    protocol: TCP
