apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  clusterIP: None
  ports:
    - port: 8123
  selector:
    app: home-assistant
  type: ClusterIP
